edition = "2023";

package settings.v1alpha1;

option go_package = "github.com/atlanticdynamic/firelynx/gen/settings/v1alpha1";

message LogOptions {
  LogFormat format = 1 [default = LOG_FORMAT_UNSPECIFIED];
  LogLevel level = 2 [default = LOG_LEVEL_UNSPECIFIED];
}

enum LogFormat {
  LOG_FORMAT_UNSPECIFIED = 0;
  LOG_FORMAT_TXT = 1;
  LOG_FORMAT_JSON = 2;
}

enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  LOG_LEVEL_DEBUG = 1;
  LOG_LEVEL_INFO = 2;
  LOG_LEVEL_WARN = 3;
  LOG_LEVEL_ERROR = 4;
  LOG_LEVEL_FATAL = 5;
}
